# eigenmorph

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
eigenmorph/: __init__.py  core.py  features.py  io.py  parcellation.py  stats.py  synthetic.py  utils.py
eigenmorph/viz/: __init__.py  interactive.py  static.py  styles.py
examples/: 01_quickstart.py  02_freesurfer_pipeline.py  03_group_statistics.py  README.md
tests/: test_core.py
